Added gzip + minify

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
-        <script src={{ url_for('static', path='main.js' )}}></script>
+        <script src={{ url_for('static', path='main.min.js' )}}></script>
     </head>
 
     <body>
