--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Main</title>
+        <link rel="stylesheet" href={{ url_for('static', path='style.css' )}} />
         <link rel="shortcut icon" type="image/ico" href={{ url_for('static', path='favicon.ico' )}} />
         <script src={{ url_for('static', path='main.min.js' )}}></script>
     </head>
