--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,78 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:500");
+:root {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+}
 
-nav {
-    background-color:#05A;
-    color:#f1f1f1;
-    width: 100%;
-    overflow:auto;
-    position: fixed;
-    top: 0px;
-    left:0;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #24252A;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+
+.logo {
+  float: left;
+  object-fit: cover;
+  width: 6rem;
+  height: 4rem;
+  border-radius: 5rem;
+  cursor: pointer;
+  float: left;
 }
-li {
-display: inline;
+
+#navigation-container {
+  width: 100%;
+  margin: 0 auto;
+  height: 4rem;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #111;
-  }
+
+.navigation-bar {
+  background-color: #1a35c4;
+  height: 4rem;
+  width: 100%;
+  text-align: center;
+}
+.navigation-bar img {
+  float: left;
+}
+.navigation-bar ul {
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  float: right;
+}
+.navigation-bar li {
+  list-style-type: none;
+  padding: 0px;
+  height: 24px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  display: inline;
+}
+.navigation-bar li a {
+  color: black;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  line-height: 70px;
+  padding: 5px 15px;
+  opacity: 0.7;
+  transition: all 0.3s ease 0;
+  border: none;
+  border-radius: 5rem;
+  padding: 1rem 1rem;
+  color: #f2f6f7;
+  background-color: rgba(0, 136, 169, 0.8);
+}
+.navigation-bar li a:hover {
+  background-color: #0088a9;
+}
+
+#menu {
+  float: right;
+}
+
+/*# sourceMappingURL=style.css.map */
