Added user state stored in localstorage for better ui

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -8,6 +8,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 }
 body {
     background-color: #c2bdba73;
+    margin: 0;
 }
 h1 {
     margin: 1em;
