--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -44,7 +44,7 @@ nav {
     margin: 1em;
 
     button,
-    a {
+    a.button {
         display: inline-block;
         padding: 0.3em 1.2em;
         margin: 0 0.3em 0.3em 0;
