--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -72,19 +72,24 @@ nav {
             background-color: $primary-button-color;
             border-radius: 0 1em 1em 1em;
             padding: 1em;
+            display: block;
         }
-        button.tab,
-        a.button.tab {
-            border-radius: 1em 1em 0 0;
-            margin: 0;
-            margin-right: -1em;
-            color: $secondary-button-font-color;
-
-            &.active {
-                color: $primary-button-font-color;
-                background-color: $primary-button-color;
-                z-index: 1;
-                position: relative;
+        .tab-header-container {
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: flex-end;
+            button.tab,
+            a.button.tab {
+                border-radius: 1em 1em 0 0;
+                margin: 0;
+                margin-right: -1em;
+                color: $secondary-button-font-color;
+                &.active {
+                    color: $primary-button-font-color;
+                    background-color: $primary-button-color;
+                    z-index: 1;
+                    position: relative;
+                }
             }
         }
     }
